--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=Customer Notification Address Facade
+spring.profiles.active=dev
+
+#logging
+spring.output.ansi.enabled=ALWAYS
+logging.level.root=info
+logging.level.org.springframework.security=TRACE
+
+# Hibernate properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+# Enable pretty print for SQL
+spring.jpa.properties.hibernate.format_sql=true
+# Set Hibernate naming strategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
