add model, repositories, services, controllers, GlobalExceptionHandler, dependencies for swagger and actuatorand schema.sql and data.sql

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 #postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/GYM
+spring.datasource.url=jdbc:postgresql://localhost:5432/CROCO
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=password
