--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Customer Notification Address Facade
+spring.application.name=customer-notification-address-facade
 spring.profiles.active=dev
 
 #logging
@@ -13,3 +13,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 # Set Hibernate naming strategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#actuator properties
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
+management.endpoints.web.path-mapping.health=health
+management.endpoints.web.path-mapping.info=info
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+info.app.version=@project.version@
+info.app.name=@project.name@
